rejuvenate design sprint

--- a/design-sprint/index.html
+++ b/design-sprint/index.html
@@ -21,9 +21,9 @@
         <div class="navbar" id="navbar">
             <a href=".." class="home-item">Jocelyn Chen</a>
             <div class="navbar-right" id="navbar-right">
-                <a href=".." class="nav-item">Projects</a>
+                <a href=".." class="nav-item active">Projects</a>
                 <a href="/about/" class="nav-item">About</a>
-                <a href="/playground/" class="nav-item active">Playground</a>
+                <a href="/playground/" class="nav-item">Playground</a>
             </div>
             <button class="burger-menu" id="burger-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -33,7 +33,7 @@
         <section class="section-regular">
             <div class="div-margin">
                 <h1>Design Sprints</h1> 
-                <p>A collection of design challenges focusing on UI design, visual design, and more. </p>    
+                <p>A collection of experimental projects and design challenges focusing on UI design, visual design, and more. </p>    
             </div>
             <!-- Rejuvenate -->
             <div class="div-margin">
@@ -44,30 +44,43 @@
                     <p>
                         A mockup of a beauty clinic's website and marketing materials aiming to empower clients to embrace their natural beauty and boost their confidence through personalized, high-quality beauty and skincare treatments.     
                     </p>
+                    <p>
+                        Explore website prototype <a href="https://www.figma.com/proto/g3uwb11sWMFNz04AGMObEf/rejuvenate?page-id=0%3A1&node-id=1-8&viewport=783%2C494%2C0.14&t=QI9UPxF0jU3Q4Tpw-1&scaling=scale-down&starting-point-node-id=1%3A8" class="link underline" target="_blank">here</a>!
+                    </p>
                 </div>
                 <div class="image-container flex-column img-margin">
                     <img
-                        src="../assets/images/design-sprint/rejuvenate-website-landing-page.png"
-                        alt="Rejuvenate Landing Page"
+                        src="../assets/images/design-sprint/rejuvenate-website-demo.gif"
+                        alt="Rejuvenate Website Demo"
                         loading="lazy"
-                        class="sprint-image"/>
-                    <p class="image-caption">Rejuvenate Website Landing Page</p>
+                        class="sprint-image-medium"/>
+                    <p class="image-caption">Rejuvenate Website Demo</p>
+                </div>
+                <div class="two-image-container">
+                    <div class="image-container flex-column img-margin">
+                        <img
+                            src="../assets/images/design-sprint/rejuvenate-outdoor-mockup.png"
+                            alt="Rejuvenate Outdoor Marketing Campaign"
+                            loading="lazy"
+                            class="auto-height"/>
+                        <p class="image-caption">Rejuvenate Outdoor Marketing Campaign</p>
+                    </div> 
+                    <div class="image-container flex-column img-margin">
+                        <img
+                            src="../assets/images/design-sprint/rejuvenate-website-landing-page.png"
+                            alt="Rejuvenate Landing Page"
+                            loading="lazy"
+                            class="auto-height"/>
+                        <p class="image-caption">Rejuvenate Website Landing Page</p>
+                    </div>
                 </div>
                 <div class="image-container flex-column img-margin">
                     <img
-                        src="../assets/images/design-sprint/rejuvenate-website-split.png"
-                        alt="Rejuvenate Website"
+                        src="../assets/images/design-sprint/rejuvenate-website-pages.png"
+                        alt="Rejuvenate Website Pages"
                         loading="lazy"
                         class="sprint-image"/>
-                    <p class="image-caption">Rejuvenate Website</p>
-                </div>
-                <div class="image-container flex-column img-margin">
-                    <img
-                        src="../assets/images/design-sprint/rejuvenate-outdoor-mockup.png"
-                        alt="Rejuvenate Outdoor Marketing"
-                        loading="lazy"
-                        class="sprint-image"/>
-                    <p class="image-caption">Rejuvenate Outdoor Marketing Campaign</p>
+                    <p class="image-caption">Rejuvenate Website Pages</p>
                 </div>
             </div>
         </section>
@@ -99,7 +112,7 @@
 
         <!-- Website scripts -->
         <script src="../assets/js/app.js"></script>
-        <script type="module" src="../assets/js/Node.js"></script>
+        <!-- <script type="module" src="../assets/js/Node.js"></script> -->
 
         <!-- Ion icons scripts -->
         <script
