--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -337,10 +337,21 @@
                             </p>
                         </div>
                     </div>
-                    <div class="interview-quote">
-                        <p>
-                            <span class="quotation">"</span> It would be nice to have a central location to know who is the advisor for each department, who I should reach out to for each RSO, and then having a way to contact the person or group hosting something."
-                        </p>
+                    <div class="interview-quote container">
+                        <div class="image-container">
+                            <img
+                            src="../assets/images/uw-cerse/interview-no-centralization.png"
+                            alt="Challenge with resources - lack of centralization"
+                            loading="lazy"
+                            class="interview-image hoverable"
+                            />
+                            <p class="image-caption">Lack of centralization</p>
+                        </div>
+                        <div class="interview-image-overlay">
+                            <p>
+                                <span class="quotation">"</span> There's no central area to find all these different STEM programs... It would be nice to have a central location to know who is the advisor for each department, who I should reach out to for each RSO, and then having a way to contact the person or group hosting something."
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -739,7 +750,7 @@
                     </div>
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>Insight #06 : Motivation</h3>
+                            <h3>Insight #0 : Motivation</h3>
                             <p>
                                 Students look for resources that match their interests and majors. Additionally, staff emphasized the importance of highlighting students' diverse backgrounds, goals, and aspirations while seeking out STEM-related resources.
                             </p> 
@@ -762,7 +773,7 @@
                     </div>
                 </div>
                 <p>
-                    Using the brainstormed concept ideas, the resource hub website was sketched out first on paper, then wireframed in a low-fidelity prototype. For the full sketches and wireframes, see this <a href="../assets/file-uploads/uw-cerse-wireframes.pdf" target="_blank" class="link underline"><b>document</b></a>.
+                    Using the brainstormed concept ideas, the resource hub website was sketched out first on paper, then wireframed as a low-fidelity prototype. For the full sketches and wireframes, see this <a href="../assets/file-uploads/uw-cerse-wireframes.pdf" target="_blank" class="link underline"><b>document</b></a>.
                 </p>
                 <p> 
                     After our research and analysis, our team got in discussion with UW CERSE on project alignment. We decided that going 
