update rejuvenate demo video

--- a/design-sprint/index.html
+++ b/design-sprint/index.html
@@ -53,7 +53,7 @@
                         src="../assets/images/design-sprint/rejuvenate-website-demo.gif"
                         alt="Rejuvenate Website Demo"
                         loading="lazy"
-                        class="sprint-image-medium"/>
+                        class="sprint-image-medium rounded"/>
                     <p class="image-caption">Rejuvenate Website Demo</p>
                 </div>
                 <div class="two-image-container">
