--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </p>
                     <h1 class="project-title">Design Sprints</h1>
                     <p class="project-paragraph">
-                        Weekly design sprint challenges focusing on UI Design and Visual Design for website, mobile, and physical mockups.
+                        Weekly experimental projects and design sprint challenges focusing on UI Design and Visual Design for website, mobile, and physical mockups.
                     </p>
                     <a href="/design-sprint/" target="_self" class="project-link">
                         <button class="project button">View Sprints &#10142;</button>
