update design sprint

--- a/design-sprint/index.html
+++ b/design-sprint/index.html
@@ -39,14 +39,15 @@
             <div class="div-margin">
 
                 <div class="sprint-context-container">
-                    <p class="secondary caps">ui design / website </p>
+                    <p class="secondary caps">ui design / website</p>
                     <h2>Rejuvenate</h2> 
                     <p>
-                        A mockup of a beauty clinic's website and marketing materials aiming to empower clients to embrace their natural beauty and boost their confidence through personalized, high-quality beauty and skincare treatments.     
+                        Rejuvenate is a concept for a beauty clinic located in Bellevue, Washington. Branding includes website and marketing materials aiming to empower clients to embrace their natural beauty and boost their confidence through personalized, high-quality beauty and skincare treatments.     
                     </p>
                     <p>
                         Explore website prototype <a href="https://www.figma.com/proto/g3uwb11sWMFNz04AGMObEf/rejuvenate?page-id=0%3A1&node-id=1-8&viewport=783%2C494%2C0.14&t=QI9UPxF0jU3Q4Tpw-1&scaling=scale-down&starting-point-node-id=1%3A8" class="link underline" target="_blank">here</a>!
                     </p>
+                    <p><b>Timeline:</b> 2 weeks</p>
                 </div>
                 <div class="image-container flex-column img-margin">
                     <img
