update hero image to profile doodle

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <section class="hero home-page section-regular" id="about">
             <div class="hero-container home-page">
                 <div class="hero-container hello">
+                    <!-- <img src="./assets/images/profile-image.png" alt="jocelyn-chen" loading="lazy" class="hero-img"/> -->
                     <img
-                    src="./assets/images/profile-image.png"
+                    src="./assets/images/profile-doodle.gif"
                     alt="jocelyn-chen"
                     loading="lazy"
                     class="hero-img"
