update uw cerse image hover overlay

--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -273,7 +273,7 @@
                         </ul>
                     </div>
                 
-                    <div class="interview-poc mobile-hidden container image-container">
+                    <div class="interview-poc mobile-hidden hover-container image-container">
                         <div class="image-container">
                             <img
                             src="../assets/images/uw-cerse/interview-contact.png"
@@ -289,7 +289,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="quote-box container">
+                    <div class="quote-box hover-container">
                         <div class="image-container">
                             <img
                             src="../assets/images/uw-cerse/interview-updates.png"
@@ -305,7 +305,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="mobile-query container">
+                    <div class="mobile-query hover-container">
                         <div class="image-container">
                             <img
                             src="../assets/images/uw-cerse/interview-contact.png"
@@ -321,7 +321,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="interview-rabbit-hole container">
+                    <div class="interview-rabbit-hole hover-container">
                         <div class="image-container">
                             <img
                             src="../assets/images/uw-cerse/interview-rabbit-hole.png"
@@ -337,7 +337,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="interview-quote container">
+                    <div class="interview-quote hover-container">
                         <div class="image-container">
                             <img
                             src="../assets/images/uw-cerse/interview-no-centralization.png"
