move design sprint to playground section

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <div class="home-bio">
                         <h1>Hello, I'm Jocelyn.</h1>
                         <p class="bio-blurb">Product designer passionate about crafting delightful & meaningful experiences through inclusive design.</p>
-                        <div class="typewriter-text">
-                            <p id="app" class="secondary"></p>
-                        </div>
+                        <!-- <div class="typewriter-text"> -->
+                            <!-- <p id="app" class="secondary"></p> -->
+                        <!-- </div> -->
                     </div> 
                     <img
                     src="./assets/images/profile-doodle.gif"
@@ -86,24 +86,24 @@
                 </div>
             </div>
             <div class="project-container img-margin flipped">
-                <a href="/design-sprint/" target="_self" class="project-link">
+                <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
                     <img
-                    src="./assets/images/design-sprint/home-project-image.png"
-                    alt="Design Sprint"
+                    src="./assets/images/robert-half/home-project-image.png"
+                    alt="Robert Half Summer Internship"
                     loading="lazy"
-                    class="project-img"
+                    class="project-img password-protect"
                     />
                 </a>
                 <div class="project-info">
                     <p class="project-sponsor secondary">
-                        UI Design / Visual Design / Mockups 
+                        Robert Half / Internship / Business Transformation
                     </p>
-                    <h1 class="project-title">Design Sprints</h1>
+                    <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
                     <p class="project-paragraph">
-                        Weekly experimental projects and design sprint challenges focusing on UI Design and Visual Design for website, mobile, and physical mockups.
+                        Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration.
                     </p>
-                    <a href="/design-sprint/" target="_self" class="project-link">
-                        <button class="project button">View Sprints &#10142;</button>
+                    <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
+                        <button class="password-protect project button" id="password-protect">Password Protected &#10142;</button>
                     </a>
                 </div>
             </div>
@@ -130,28 +130,6 @@
                 </div>
             </div>
             <div class="project-container img-margin flipped">
-                <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
-                    <img
-                    src="./assets/images/robert-half/home-project-image.png"
-                    alt="Robert Half Summer Internship"
-                    loading="lazy"
-                    class="project-img password-protect"
-                    />
-                </a>
-                <div class="project-info">
-                    <p class="project-sponsor secondary">
-                        Robert Half / Internship / Business Transformation
-                    </p>
-                    <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
-                    <p class="project-paragraph">
-                        Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration.
-                    </p>
-                    <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
-                        <button class="password-protect project button" id="password-protect">Password Protected &#10142;</button>
-                    </a>
-                </div>
-            </div>
-            <div class="project-container img-margin">
                 <a href="/mint-mobile/" target="_self" class="project-link">
                     <img
                         src="./assets/images/mint-mobile/home-project-image.png"
@@ -179,24 +157,14 @@
         <section class="playground section-regular">
             <h1>Other projects</h1>
             <div class="playground-grid div-margin">
-                <div class="playground-div linkable" id="vera-project">
-                    <a href="the-vera-project/" target="_self">
+                <div class="playground-div linkable" id="design-sprint">
+                    <a href="design-sprint/" target="_self">
                         <img 
-                            src="./assets/images/the-vera-project/home-project-image.png"
-                            alt="Vera Project Redesign"
+                            src="./assets/images/design-sprint/home-project-image.png"
+                            alt="Design Sprints"
                             loading="lazy"
                             class="playground-image"/>
-                        <p class="image-caption">The Vera Project Redesign</p>
-                    </a>
-                </div>
-                <div class="playground-div linkable">
-                    <a href="/social-media-graphics/">
-                        <img 
-                            src="./assets/images/playground/social-media-designs.png"
-                            alt="Designs for social media and apparel"
-                            loading="lazy"
-                            class="playground-image"/>
-                        <p class="image-caption">Social Media Graphics</p>
+                        <p class="image-caption">Design Sprints</p>
                     </a>
                 </div>
                 <div class="playground-div linkable">
@@ -207,6 +175,16 @@
                             loading="lazy"
                             class="playground-image"/>
                         <p class="image-caption">Boba Run Game</p>
+                    </a>
+                </div>
+                <div class="playground-div linkable">
+                    <a href="/social-media-graphics/">
+                        <img 
+                            src="./assets/images/playground/social-media-designs.png"
+                            alt="Designs for social media and apparel"
+                            loading="lazy"
+                            class="playground-image"/>
+                        <p class="image-caption">Social Media Graphics</p>
                     </a>
                 </div>
                 <a href="/playground/" class="view-more">View more &rarr;</a>
