update playground page and add design sprint here

--- a/playground/index.html
+++ b/playground/index.html
@@ -39,6 +39,18 @@
                 <p class="secondary">a series of archived projects</p>
                 <div class="playground-container">
                     <div class=playground-item-container>
+                        <div class="playground-item linkable" id="design-sprint">
+                            <a href="/design-sprint/" target="_self">
+                                <img 
+                                src="../assets/images/design-sprint/home-project-image.png"
+                                loading="lazy"
+                                class="playground-image"/>
+                            </a>
+                        </div>
+                        <p class="subheader"><a href="/design-sprint/" target="_self">Design Sprints</a></p>
+                        <p>Collection of design challenges focusing on ui and visual design.</p>
+                    </div>
+                    <div class=playground-item-container>
                         <div class="playground-item linkable" id="vera-project">
                             <a href="/the-vera-project/" target="_self">
                                 <img 
