update landing page

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
         </div>
         
         <!-- Hero Section -->
-        <section class="hero home-page section-regular" id="about">
+        <section class="hero home-page" id="about">
             <div class="hero-container home-page">
                 <div class="hero-container hello">
                     <!-- <img src="./assets/images/profile-image.png" alt="jocelyn-chen" loading="lazy" class="hero-img"/> -->
                     <div class="home-bio">
-                        <h1>Hello, I'm Jocelyn.</h1>
-                        <p class="bio-blurb">Product designer passionate about crafting delightful & meaningful experiences through inclusive design.</p>
+                        <h1>Hello, I'm Jocelyn!</h1>
+                        <!-- <p class="bio-blurb">Product designer passionate about crafting delightful & meaningful experiences through inclusive design.</p> -->
+                        <div>
+                            <p class="bio-blurb">Product Designer ༶ Creative Coder ༶ Crafter ༶ Pastry Lover ༶ Puzzler</p>
+                            <p>✧ Currently designing systems @<span class="secondary-span"> Global Radio Outreach</span>, previously Robert Half</p>
+                        </div>
                         <!-- <div class="typewriter-text"> -->
                             <!-- <p id="app" class="secondary"></p> -->
                         <!-- </div> -->
@@ -52,11 +56,11 @@
                     class="hero-img"
                     />                
                 </div>
-                <div class="scroll-down-container">
+                <!-- <div class="scroll-down-container">
                     <a href="#projects" class="scroll-down animate__animated animate__shakeY">
                         <i class="fa-solid fa-chevron-down fa-2xl"></i>
                     </a>
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -74,9 +78,9 @@
                 </a>
                 <div class="project-info">
                     <p class="project-sponsor secondary">
-                        UW CERSE / Sponsored Senior Capstone / Website
+                        UW CERSE / Sponsored Senior Capstone / Web Platform
                     </p>
-                    <h1 class="project-title">SERCH: STEM Equity Resource Community Hub</h1>
+                    <h2 class="project-title">SERCH: STEM Equity Resource Community Hub</h2>
                     <p class="project-paragraph">
                         Collaborated with a research team to develop a STEM equity resource discovery platform for university students and staff to seamlessly find and share STEM resources, leveraging research insights to inform strategic design choices.
                     </p>
@@ -98,7 +102,7 @@
                     <p class="project-sponsor secondary">
                         Robert Half / Internship / Business Transformation
                     </p>
-                    <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
+                    <h2 class="project-title" id="password-protect-title">Digital Service Products Modernization</h2>
                     <p class="project-paragraph">
                         Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration.
                     </p>
@@ -120,7 +124,7 @@
                     <p class="project-sponsor secondary">
                         UX Design / Mobile
                     </p>
-                    <h1 class="project-title">Husky Buddy: Creating Student Connections</h1>
+                    <h2 class="project-title">Husky Buddy: Creating Student Connections</h2>
                     <p class="project-paragraph">
                         Designed a student-centric mobile app for increased engagement and community-building in an online environment.
                     </p>
@@ -142,7 +146,7 @@
                     <p class="project-sponsor secondary">
                         Marketing / Mobile
                     </p>
-                    <h1 class="project-title">Mint Mobile Instagram Communication Strategy</h1>
+                    <h2 class="project-title">Mint Mobile Instagram Communication Strategy</h2>
                     <p class="project-paragraph">
                         Restructuring Mint Mobile's Instagram communication strategy to reinforce their $15/month Premium Wireless offering. 
                     </p>
@@ -168,7 +172,7 @@
                     </a>
                 </div>
                 <div class="playground-div linkable">
-                    <a href="https://jclync.github.io/boba-run/" target="_blank">
+                    <a href="https://jocelynchenjc.com/hcde-438-portfolio/fp2_final/" target="_blank">
                         <img 
                             src="./assets/images/playground/boba-run.png"
                             alt="Boba Run Game"
