--- a/playground/index.html
+++ b/playground/index.html
@@ -85,7 +85,7 @@
                                 class="boba-run-game playground-image"/>
                             </a>
                         </div>
-                        <p class="subheader"><a href="https://jclync.github.io/boba-run/" target="_blank">Boba Run</a></p>
+                        <p class="subheader"><a href="https://jocelynchenjc.com/hcde-438-portfolio/fp2_final/" target="_blank">Boba Run</a></p>
                         <p>Game inspired by Cookie Run, coded entirely in JavaScript</p>
                     </div>
                     <div class="playground-item-container">
