set up google tag for analytics

--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -21,9 +21,17 @@
         <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
 
         <title>Husky Buddy | Jocelyn Chen's Portfolio</title>
-  </head>
+    </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  <body id="case-study-page">
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>
+    <body id="case-study-page">
         <!-- Navbar -->
         <div class="navbar" id="navbar">
             <a href=".." class="home-item">Jocelyn Chen</a>
