--- a/robert-half-digital-modernization/index.html
+++ b/robert-half-digital-modernization/index.html
@@ -20,7 +20,15 @@
         <!-- favicon -->
         <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>
     <body class="staticrypt-body">
         <div id="staticrypt_loading" class="staticrypt-spinner-container">
             <div class="staticrypt-spinner"></div>
