--- a/template.html
+++ b/template.html
@@ -18,9 +18,17 @@
         <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
 
         <title>TITLE | Jocelyn Chen's Portfolio</title>
-  </head>
+    </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  <body>
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>
+    <body>
         <!-- Navbar -->
         <!-- old nav 
         <nav id="navbar">
