--- a/design-sprint/index.html
+++ b/design-sprint/index.html
@@ -16,6 +16,15 @@
 
         <title>Design Sprints | Jocelyn Chen's Portfolio</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>    
     <body class="playground-project-page" id="design-sprint">
         <!-- Navbar -->
         <div class="navbar" id="navbar">
