--- a/mint-mobile/index.html
+++ b/mint-mobile/index.html
@@ -22,7 +22,15 @@
 
         <title>Mint Mobile | Jocelyn Chen's Portfolio</title>
   </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>
   <body id="case-study-page">
         <!-- Navbar -->
         <div class="navbar" id="navbar">
