--- a/playground/index.html
+++ b/playground/index.html
@@ -16,6 +16,15 @@
 
         <title>Playground | Jocelyn Chen's Portfolio</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>
     <body class="playground-page">
         <!-- Navbar  -->
         <!-- Navbar -->
