--- a/the-vera-project/index.html
+++ b/the-vera-project/index.html
@@ -17,6 +17,15 @@
 
         <title>The Vera Project | Jocelyn Chen's Portfolio</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SQ0DDTR0JJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SQ0DDTR0JJ');
+    </script>
     <body class="playground-project-page" id="vera-project">
         <!-- Navbar -->
         <div class="navbar" id="navbar">
