--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
                     <h2 class="secondary">Thanks for stopping by!</h2>
                     <p>If you'd like to connect, send me a message ◡̈</p>
                     <p class="footer-link secondary">
-                        <a href="mailto: jocelynchen1126@gmail.com" class="link">jocelynchen1126@gmail.com</a> /
+                        <a href="mailto: jocelynchendesigns@gmail.com" class="link">jocelynchendesigns@gmail.com</a> /
                         <a href="https://www.linkedin.com/in/jocelyn-chen-/" class="link">LinkedIn</a>
                     </p>
                 </div>
                 <div class="column right-align-text">
                     <p class="secondary footer-copy">beep boop beep by jocelyn</p>
-                    <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
+                    <p class="secondary footer-copy">&copy; 2025 Jocelyn Chen</p>
                 </div>
             </div> 
         </footer>
