--- a/template.html
+++ b/template.html
@@ -71,12 +71,12 @@
                 <a href="https://www.linkedin.com/in/jocelyn-chen-/" target="_blank" class="footer-icon">
                     <i class="fa-brands fa-linkedin fa-2xl"></i>
                 </a>
-                <a href="mailto: jocelynchen1126@gmail.com" target="_blank" class="footer-icon">
+                <a href="mailto: jocelynchendesigns@gmail.com" target="_blank" class="footer-icon">
                     <i class="fa-regular fa-envelope fa-2xl"></i>
                 </a>
             </div>
             <p class="secondary footer-copy">beep boop beep by Jocelyn</p>
-            <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
+            <p class="secondary footer-copy">&copy; 2025 Jocelyn Chen</p>
         </footer>
 
         <!-- Website scripts -->
